k8s/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cheetah-goes-cloud
spec:
  replicas: 1
  template:
    spec:
      serviceAccountName: default
      containers:
        - name: cheetah-goes-cloud
          image: "ghcr.io/gattma/cheetah-goes-cloud:step1-3d7728e"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 15
            failureThreshold: 3
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 15
            initialDelaySeconds: 60
            failureThreshold: 3
            successThreshold: 1
          resources:
            limits:
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
