k8s/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cheetah-goes-cloud-kustomize
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
